# ASCENDS

./: .gitignore  CHANGELOG.md  LICENSE  README.dev.md  README.md  TODO.md  api_reference.md  ascends.py  ascends_server.py  conda_requirements.txt  contributing.md  env_win_native.yml  environment.yml  install.ps1  install.sh  log  paper.bib  paper.md  predict.py  pyproject.toml  quickstart.md  run_gui.bat  run_gui.ps1  run_gui.sh  setup.py  test.ps1  test.sh  train.py
Docker/: .dockerignore  Dockerfile
ascends/: __init__.py  cli.py
ascends_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bundle/: make_bundle.bat  make_bundle.ps1  make_bundle.sh
data/: BostonHousing.csv
docs/: lunch_and_learn_30min_beginner.md
examples/: BostonHousing.csv  BostonHousing_input_wrong.csv  BostonHousing_test copy.csv  BostonHousing_test.csv  fatigue.csv  fatigue_inputs_sample50.csv  quickstart.md  sample.csv
notebook/: AHEAD Code Cleaning.ipynb  Ascends Machine Learning Example-Copy1.ipynb  Ascends Machine Learning Example.ipynb  Ascends for Classification.ipynb  Correlation Analysis.ipynb  Deep Learning Regression (Creep).ipynb  New capabilities brainstorming for ascends.ipynb  model.pkl  reference.ipynb  result.csv  test.ipynb  trained_model  trained_model.pkl
scripts/: install.bat  install.ps1  install.sh  run_gui.bat  run_gui.ps1  run_gui.sh
static/: app.css  common.js  custom.css
templates/: base.html  correlation.html  home.html  index.html  ml.html  predict.html  table.html  train.html  ui_lab.html
test/: classification_gui_smoke.py  test.ps1  (+1 more)
(+114 files in other folders)
